# Testapp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
LudoGame/: README.md
LudoGame/LudoGame/: ContentView.swift  Info.plist  LudoGameApp.swift
LudoGame/LudoGame.xcodeproj/: project.pbxproj
LudoGame/LudoGame/Engine/: LudoBoardLayout.swift  LudoGameEngine.swift
LudoGame/LudoGame/Models/: GamePlayer.swift  GameToken.swift  LudoGameState.swift  PlayerColor.swift
LudoGame/LudoGame/ViewModels/: LudoViewModel.swift
LudoGame/LudoGame/Views/: BoardView.swift  DiceView.swift  GameView.swift  HomeView.swift  TokenView.swift  WinnerView.swift
LudoGameAndroid/: README.md  settings.gradle.kts
LudoGameAndroid/app/: build.gradle.kts
LudoGameAndroid/app/src/main/: AndroidManifest.xml
LudoGameAndroid/app/src/main/java/com/ludogame/app/: MainActivity.kt
LudoGameAndroid/app/src/main/java/com/ludogame/app/engine/: LudoBoardLayout.kt  LudoGameEngine.kt
LudoGameAndroid/app/src/main/java/com/ludogame/app/models/: GamePlayer.kt  GameToken.kt  LudoGameState.kt  PlayerColor.kt
LudoGameAndroid/app/src/main/java/com/ludogame/app/ui/components/: BoardView.kt  DiceView.kt  WinnerOverlay.kt
LudoGameAndroid/app/src/main/java/com/ludogame/app/viewmodel/: LudoViewModel.kt
LudoGameAndroid/app/src/main/res/drawable/: ic_launcher.xml
LudoGameAndroid/app/src/main/res/values/: themes.xml
config/: profile.example.yaml
src/job_auto_apply/: __init__.py  applier.py  cli.py  config.py  database.py  models.py
(+4 files in other folders)
