[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "job-auto-apply"
version = "0.1.0"
description = "Automatically search and apply to jobs using your profile and resume"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "playwright>=1.40.0",
    "sqlalchemy>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
job-apply = "job_auto_apply.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
